Tue Jun 19 02:33:40 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/man.c (man): Allow sections to be more than one character, and
	  trim them for use in directory names.
	* src/manp.c (read_config_file): Read ~/.manpath first, as entries
	  are added the other way around now.

Mon Jun 18 18:55:39 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (add_sections, get_sections): New functions.
	  (add_to_dirlist): Recognize new SECTIONS directive.
	* src/manp.h (iterate_catlist, start_iterator): Remove (not used).
	  (get_sections): New prototype.
	* src/man.c (get_section_list): Use get_sections() instead of
	  std_sections if it returns a non-empty list.
	* src/man_db.conf.in: Add documentation of SECTIONS, and a default
	  line. The documentation is still inaccurate (extensions don't work
	  well yet).
	* include/manconfig.h.in (STD_SECTIONS): Reduce to only
	  single-character sections; the rest will be set in the
	  configuration file.

	* src/manp.c (add_to_list): Add to the tail rather than the head
	  (needed for SECTIONS, probably makes other things more intuitive).
	  (read_config_file): Restore print_list() in debug mode.

	* src/check_mandirs.c: Add copyright notice and change information.
	* src/lexgrog.l: Likewise.
	* src/man.c: Likewise.
	* src/mandb.c: Likewise.

	* src/compression.c (get_ztemp): Remove redundant test.

	* src/man.c (get_preprocessors_from_file): Change an = to ==.

	* src/wrapper.c (main): Cosmetic improvements.

Sat Jun 16 19:22:51 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/straycats.c (check_for_stray): Check that
	  canonicalize_file_name() succeeded, not that it failed. (I'm
	  pretty sure that this is the last instance of this now.)

Sat Jun 16 18:30:09 BST 2001  Colin Watson  <cjwatson@debian.org>

	* libdb/db_store.c: Move id-favouring logic to a macro. If
	  FAVOUR_STRAYCATS is set, make sure a WHATIS_MAN entry won't
	  inadvertently replace a STRAY_CAT.
