@@ -1,3 +1,10 @@
+Sat Jun 23 15:15:41 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* ult_src.c (ult_src): Restore the original mantree to the start of
+	  basename before calling test_for_include(), in case ult_softlink()
+	  went outside the mantree.
+	  (ult_softlink): Make debugging message print the absolute path.
+
 Tue Jun 19 02:33:40 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (man): Allow sections to be more than one character, and
